force-app/main/default/objects/Primary_Sales_Rep__c/fields/Link_to_VMI__c.field-meta.xml
<CustomField>
    <fullName>Link_to_VMI__c</fullName>
    <formula>HYPERLINK(&quot;http://10.130.1.239/?networkid=&quot; &amp;Network_ID__c , &quot;VMI Link&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to VMI</label>
    <type>Text</type>
</CustomField>