force-app/main/default/objects/Primary_Sales_Rep__c/fields/name_bdm_rvp__c.field-meta.xml
<CustomField>
    <fullName>name_bdm_rvp__c</fullName>
    <label>Name - BDM/RVP</label>
    <length>35</length>
    <type>Text</type>
</CustomField>