force-app/main/default/objects/Primary_Sales_Rep__c/fields/name_dir__c.field-meta.xml
<CustomField>
    <fullName>name_dir__c</fullName>
    <label>Name - Level 3</label>
    <length>35</length>
    <type>Text</type>
</CustomField>