force-app/main/default/objects/Primary_Sales_Rep__c/fields/Name_DMD__c.field-meta.xml
<CustomField>
    <fullName>Name_DMD__c</fullName>
    <label>Name - DMD</label>
    <length>50</length>
    <type>Text</type>
</CustomField>