force-app/main/default/objects/Primary_Sales_Rep__c/fields/name_gsm__c.field-meta.xml
<CustomField>
    <fullName>name_gsm__c</fullName>
    <label>Name - Level 2</label>
    <length>35</length>
    <type>Text</type>
</CustomField>