force-app/main/default/objects/Primary_Sales_Rep__c/fields/name_pres__c.field-meta.xml
<CustomField>
    <fullName>name_pres__c</fullName>
    <label>Name - Sales Leader</label>
    <length>35</length>
    <type>Text</type>
</CustomField>