force-app/main/default/objects/Primary_Sales_Rep__c/fields/Name_TL__c.field-meta.xml
<CustomField>
    <fullName>Name_TL__c</fullName>
    <label>Name - TL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>