force-app/main/default/objects/Primary_Sales_Rep__c/fields/name_vp__c.field-meta.xml
<CustomField>
    <fullName>name_vp__c</fullName>
    <label>Name - Level 1</label>
    <length>35</length>
    <type>Text</type>
</CustomField>