force-app/main/default/objects/Primary_Sales_Rep__c/fields/name_zm_sm__c.field-meta.xml
<CustomField>
    <fullName>name_zm_sm__c</fullName>
    <label>Name - Level 3a</label>
    <length>35</length>
    <type>Text</type>
</CustomField>