force-app/main/default/objects/Primary_Sales_Rep__c/fields/Network_ID__c.field-meta.xml
<CustomField>
    <fullName>Network_ID__c</fullName>
    <externalId>true</externalId>
    <label>Network ID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>