force-app/main/default/objects/Primary_Sales_Rep__c/fields/NPS_Contact_List__c.field-meta.xml
<CustomField>
    <fullName>NPS_Contact_List__c</fullName>
    <formula>HYPERLINK(

/* If they&apos;re in Lightning */
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

/* Use Lightning syntax, optimized to avoid full page reload */
&quot;/lightning/r/Report/00O5w00000AV5lbEAD/view?fv3=&quot;&amp;Name&amp;&quot;&amp;fv4=&quot;&amp;Aliases__c&amp;&quot;&amp;fv5=&quot;&amp;Aliases__c&amp;&quot;&amp;fv6=&quot;&amp;Aliases__c&amp;&quot;&amp;fv7=&quot;&amp;Aliases__c&amp;&quot;&amp;fv8=&quot;&amp;Aliases__c,

/* Otherwise use Classic syntax */
&quot;/00O5w00000AV5lbEAD?&amp;fv3=&quot;&amp;Name&amp;&quot;&amp; fv4=&quot;&amp;Aliases__c&amp;&quot;&amp;fv5=&quot;&amp;Aliases__c&amp;&quot;&amp;fv6=&quot;&amp;Aliases__c&amp;&quot;&amp;fv7=&quot;&amp;Aliases__c&amp;&quot;&amp;fv8=&quot;&amp;Aliases__c),

/* Specify the link text */
&quot;NPS Contact List&quot;,

/* Keep it in the same browser tab to avoid full page reload */
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Contact List</label>
    <type>Text</type>
</CustomField>