force-app/main/default/objects/Primary_Sales_Rep__c/fields/of_Direct_Reports__c.field-meta.xml
<CustomField>
    <fullName>of_Direct_Reports__c</fullName>
    <label># of Direct Reports</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>