force-app/main/default/objects/Primary_Sales_Rep__c/fields/Opportunities_Open_by_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Open_by_Vertical__c</fullName>
    <formula>HYPERLINK( 

/* If they&apos;re in Lightning */ 
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;, 

/* Use Lightning syntax, optimized to avoid full page reload */ 
&quot;/lightning/r/Report/00O70000004Hx02EAC/view?&amp;fv0=&quot;, 

/* Otherwise use Classic syntax */ 
&quot;/00O70000004Hx02EAC?pv0=&quot;) 

/* Append the PSR Name */ 
&amp; Name, 

/* Specify the link text */ 
&quot;Opportunities - Open by Vertical&quot;, 

/* Keep it in the same browser tab to avoid full page reload */ 
&quot;_self&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunities - Open by Vertical</label>
    <type>Text</type>
</CustomField>