force-app/main/default/objects/Primary_Sales_Rep__c/fields/Opportunities_Stage_2_and_3_Movements__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Stage_2_and_3_Movements__c</fullName>
    <formula>HYPERLINK( 

/* If they&apos;re in Lightning */ 
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;, 

/* Use Lightning syntax, optimized to avoid full page reload */ 
&quot;/lightning/r/Report/00Of2000005Bvwv/view?fv5=&quot;&amp;Aliases__c&amp;&quot;&amp;fv6=&quot;&amp;Aliases__c&amp;&quot;&amp;fv7=&quot;&amp;Aliases__c&amp;&quot;&amp;fv8=&quot;&amp;Aliases__c&amp;&quot;&amp;fv9=&quot;&amp;Aliases__c, 

/* Otherwise use Classic syntax */ 
&quot;/00Of2000005Bvwv?pv5=&quot;&amp;Aliases__c&amp;&quot;&amp;pv6=&quot;&amp;Aliases__c&amp;&quot;&amp;pv7=&quot;&amp;Aliases__c&amp;&quot;&amp;pv8=&quot;&amp;Aliases__c&amp;&quot;&amp;pv9=&quot;&amp;Aliases__c) 

, 
/* Specify the link text */ 
&quot;Opportunities - Stage 2 and 3 Movements&quot;, 

/* Keep it in the same browser tab to avoid full page reload */ 
&quot;_self&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunities - Stage 2 and 3 Movements</label>
    <type>Text</type>
</CustomField>