force-app/main/default/objects/Primary_Sales_Rep__c/fields/Opportunities_with_Specialists__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_with_Specialists__c</fullName>
    <formula>HYPERLINK(

/* If they&apos;re in Lightning */
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

/* Use Lightning syntax, optimized to avoid full page reload */
&quot;/lightning/r/Report/00O5w00000AUkXOEA1/view?&amp;fv3=&quot;,

/* Otherwise use Classic syntax */
&quot;/00O5w00000AUkXOEA10?pv3=&quot;)

/* Append the PSR Name */
&amp; Name,

/* Specify the link text */
&quot;Opportunities - With Specialists&quot;,

/* Keep it in the same browser tab to avoid full page reload */
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunities - with Specialists</label>
    <type>Text</type>
</CustomField>