force-app/main/default/objects/Primary_Sales_Rep__c/fields/Packaging_Sales_Budget__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Sales_Budget__c</fullName>
    <defaultValue>0</defaultValue>
    <label>BM - Packaging Sales Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>