force-app/main/default/objects/Primary_Sales_Rep__c/fields/Paper_GTM_Budget__c.field-meta.xml
<CustomField>
    <fullName>Paper_GTM_Budget__c</fullName>
    <defaultValue>0</defaultValue>
    <label>BM - Paper CGTM Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>