force-app/main/default/objects/Primary_Sales_Rep__c/fields/Pipeline_Reviews_for_Manager_s_Reports__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Reviews_for_Manager_s_Reports__c</fullName>
    <description>Pipeline Reviews for this Manager&apos;s Direct Reports</description>
    <formula>HYPERLINK( 

/* If they&apos;re in Lightning */ 
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;, 

/* Use Lightning syntax, optimized to avoid full page reload */ 
&quot;/lightning/r/Report/00O5w00000AU9tuEAD/view?&amp;fv0=&quot;,

/* Otherwise use Classic syntax */ 
&quot;/00O5w00000AU9tuEAD?pv0=&quot;) 

/* Primary Sales Rep Name */ 
 &amp; Name,

/* Specify the link text */ 
&quot;	Pipeline Reviews - this Manager&apos;s Direct Reports&quot;, 

/* Keep it in the same browser tab to avoid full page reload */ 
&quot;_self&quot;
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pipeline Reviews - Manager&apos;s Reports</label>
    <type>Text</type>
</CustomField>