force-app/main/default/objects/Primary_Sales_Rep__c/fields/PSR_Manager_Field_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>PSR_Manager_Field_Mismatch__c</fullName>
    <formula>OR(
name_bdm_rvp__c &lt;&gt; Reports_To__r.name_bdm_rvp__c, 
name_dir__c &lt;&gt; Reports_To__r.name_dir__c,
Name_DMD__c &lt;&gt; Reports_To__r.Name_DMD__c,
name_gsm__c &lt;&gt; Reports_To__r.name_gsm__c,
name_pres__c &lt;&gt; Reports_To__r.name_pres__c,
Name_TL__c &lt;&gt; Reports_To__r.Name_TL__c,
name_vp__c &lt;&gt; Reports_To__r.name_vp__c,
name_zm_sm__c &lt;&gt; Reports_To__r.name_zm_sm__c,

email_bdm_rvp__c &lt;&gt; Reports_To__r.email_bdm_rvp__c,
email_dir__c &lt;&gt; Reports_To__r.email_dir__c,
Email_DMD__c &lt;&gt; Reports_To__r.Email_DMD__c,
GSM_Email__c &lt;&gt; Reports_To__r.GSM_Email__c,
email_pres__c &lt;&gt; Reports_To__r.email_pres__c,
Email_TL__c &lt;&gt; Reports_To__r.Email_TL__c,
email_vp__c &lt;&gt; Reports_To__r.email_vp__c,
email_zm_sm__c &lt;&gt; Reports_To__r.email_zm_sm__c,

Reports_To_Network_ID_Text__c &lt;&gt; Reports_To__r.Network_ID__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSR Manager Field Mismatch</label>
    <type>Checkbox</type>
</CustomField>