force-app/main/default/objects/Primary_Sales_Rep__c/fields/PSR_User_Field_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>PSR_User_Field_Mismatch__c</fullName>
    <formula>OR( 
name_bdm_rvp__c &lt;&gt; SF_userid__r.name_bdm_rvp__c, 
name_dir__c &lt;&gt; SF_userid__r.name_dir__c, 
Name_DMD__c &lt;&gt; SF_userid__r.name_dmd__c, 
name_gsm__c &lt;&gt; SF_userid__r.name_gsm__c, 
name_pres__c &lt;&gt; SF_userid__r.name_pres__c, 
Name_TL__c &lt;&gt;  SF_userid__r.name_team_lead__c, 
name_vp__c &lt;&gt; SF_userid__r.name_vp__c, 
name_zm_sm__c &lt;&gt; SF_userid__r.name_zm_sm__c, 

email_bdm_rvp__c &lt;&gt;  SF_userid__r.BDM_RVP_Email__c, 
email_dir__c &lt;&gt; SF_userid__r.Dir_Email__c, 
Email_DMD__c &lt;&gt; SF_userid__r.Email_DMD__c, 
GSM_Email__c &lt;&gt; SF_userid__r.GSM_Email__c, 
email_pres__c &lt;&gt; SF_userid__r.Pres_Email__c, 
Email_TL__c &lt;&gt; SF_userid__r.TL_Email__c, 
email_vp__c &lt;&gt; SF_userid__r.Vice_President_Email__c, 
email_zm_sm__c &lt;&gt; SF_userid__r.ZM_SM_Email__c 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSR User Field Mismatch</label>
    <type>Checkbox</type>
</CustomField>