force-app/main/default/objects/Primary_Sales_Rep__c/fields/Rep_Activity_Report__c.field-meta.xml
<CustomField>
    <fullName>Rep_Activity_Report__c</fullName>
    <formula>HYPERLINK(

/* If they&apos;re in Lightning */
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

/* Use Lightning syntax, optimized to avoid full page reload */
&quot;#/sObject/00O39000004hnuo/view?fv0=&quot;,

/* Otherwise use Classic syntax */
&quot;/00O39000004hnuo?pv0=&quot;)

/* Append the PSR Name */
 &amp; Name,
 
/* Specify the link text */
&quot;View Rep Activities&quot;,

/* Keep it in the same browser tab to avoid full page reload */
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rep Actvity Report</label>
    <type>Text</type>
</CustomField>