force-app/main/default/objects/Primary_Sales_Rep__c/fields/Rep_Counter__c.field-meta.xml
<CustomField>
    <fullName>Rep_Counter__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rep Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>