force-app/main/default/objects/Primary_Sales_Rep__c/fields/Reporting_Links__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Links__c</fullName>
    <formula>Name</formula>
    <label>Reporting Links</label>
    <type>Text</type>
</CustomField>