force-app/main/default/objects/Primary_Sales_Rep__c/fields/Reports_To__c.field-meta.xml
<CustomField>
    <fullName>Reports_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reports To</label>
    <referenceTo>Primary_Sales_Rep__c</referenceTo>
    <relationshipLabel>Primary Sales Reps</relationshipLabel>
    <relationshipName>R00N700000025FT1EAM</relationshipName>
    <type>Lookup</type>
</CustomField>