force-app/main/default/objects/Primary_Sales_Rep__c/fields/Reports_to_and_Manager_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Reports_to_and_Manager_Mismatch__c</fullName>
    <formula>UPPER(Reports_To__r.Name) &lt;&gt; UPPER(SF_userid__r.Manager.FirstName&amp;&quot; &quot;&amp;SF_userid__r.Manager.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reports to and Manager Mismatch</label>
    <type>Checkbox</type>
</CustomField>