force-app/main/default/objects/Primary_Sales_Rep__c/fields/Reports_To_Network_ID_Text__c.field-meta.xml
<CustomField>
    <fullName>Reports_To_Network_ID_Text__c</fullName>
    <label>Reports To Network ID (Text)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>