force-app/main/default/objects/Primary_Sales_Rep__c/fields/Servicing_Division__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Servicing Division</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Servicing_Division__c.Active__c</field>
            <operation>equals</operation>
            <value>true</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Servicing_Division__c</referenceTo>
    <relationshipLabel>Reps With This Default Servicing Division</relationshipLabel>
    <relationshipName>Primary_Sales_Reps</relationshipName>
    <type>Lookup</type>
</CustomField>