force-app/main/default/objects/Primary_Sales_Rep__c/fields/SF_userid__c.field-meta.xml
<CustomField>
    <fullName>SF_userid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N7000000258R6EAI</relationshipName>
    <type>Lookup</type>
</CustomField>