force-app/main/default/objects/Primary_Sales_Rep__c/fields/Total_GTM_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_GTM_Budget__c</fullName>
    <formula>FS_GTM_Budget__c + Packaging_GTM_Budget__c + Paper_GTM_Budget__c + Unknown_GTM_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total CGTM Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>