force-app/main/default/objects/Primary_Sales_Rep__c/fields/TotalPSR__c.field-meta.xml
<CustomField>
    <fullName>TotalPSR__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total PSR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>