force-app/main/default/objects/Primary_Sales_Rep__c/fields/User_Group__c.field-meta.xml
<CustomField>
    <fullName>User_Group__c</fullName>
    <formula>SF_userid__r.User_Group__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Group</label>
    <type>Text</type>
</CustomField>