force-app/main/default/objects/Primary_Sales_Rep__c/fields/User_Manager__c.field-meta.xml
<CustomField>
    <fullName>User_Manager__c</fullName>
    <formula>SF_userid__r.Manager.FirstName&amp;&quot; &quot;&amp;SF_userid__r.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Manager</label>
    <type>Text</type>
</CustomField>