force-app/main/default/objects/Primary_Sales_Rep__c/fields/user_profile__c.field-meta.xml
<CustomField>
    <fullName>user_profile__c</fullName>
    <formula>SF_userid__r.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The profile associated with this Primary Sales Rep&apos;s user record.  Shows blank if there is no user associated.</inlineHelpText>
    <label>User: Profile</label>
    <type>Text</type>
</CustomField>