force-app/main/default/objects/Primary_Sales_Rep__c/fields/user_role__c.field-meta.xml
<CustomField>
    <fullName>user_role__c</fullName>
    <formula>SF_userid__r.UserRole.Name</formula>
    <inlineHelpText>The role associated with this Primary Sales Rep&apos;s user record.  Shows blank if there is no user associated.</inlineHelpText>
    <label>User: Role</label>
    <type>Text</type>
</CustomField>